fix: bug fix align in transaction item

--- a/src/infraestructure/views/components/TransactionItem.module.scss
+++ b/src/infraestructure/views/components/TransactionItem.module.scss
@@ -10,7 +10,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
-    min-width: 4rem;
+    flex: 1;
+  }
+
+  &__toUser {
+    flex: 1;
+    text-align: end;
   }
 
   &__quantity {
